--- a/index.html
+++ b/index.html
@@ -2,39 +2,61 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapillary + Mapbox Clickable Map</title>
+<title>Mapillary + Mapbox Interactive Viewer</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.18.0/mapbox-gl.css" rel="stylesheet">
-<link href="https://unpkg.com/mapillary-js@4.1.0/dist/mapillary.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.18.0/mapbox-gl.js"></script>
+
+<link href="https://unpkg.com/mapillary-js@4.1.0/dist/mapillary.css" rel="stylesheet">
 <script src="https://unpkg.com/mapillary-js@4.1.0/dist/mapillary.js"></script>
+
 <style>
   body { margin: 0; padding: 0; }
   #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-  /* Styling for the small Mapillary viewer window */
-  #mly { position: absolute; bottom: 10px; right: 10px; width: 400px; height: 300px; z-index: 1; border: 2px solid white; box-shadow: 0 0 10px rgba(0,0,0,0.5); background: #000; }
+  /* The Image Viewer Window */
+  #mly { 
+    position: absolute; 
+    bottom: 20px; 
+    right: 20px; 
+    width: 400px; 
+    height: 300px; 
+    z-index: 10; 
+    border: 3px solid white; 
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+    background: #000; 
+  }
 </style>
 </head>
 <body>
+
 <div id="mly"></div>
 <div id="map"></div>
+
 <script>
+  // Your Mapbox Access Token
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
 
+  // 1. Initialize the Mapbox Map
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/standard',
     zoom: 10,
-    center: [-87.622088, 41.878781]
+    center: [-87.622088, 41.878781] // Initial focus (Chicago)
   });
 
-  // Initialize Mapillary Viewer
+  // 2. Initialize the Mapillary Viewer
   const mly = new mapillary.Viewer({
-    accessToken: 'MLY|4142433049200173|72206abe5035850d6743b23a49c41333', // Mapillary Client Token
+    accessToken: 'MLY|4142433049200173|72206abe5035850d6743b23a49c41333',
     container: 'mly',
   });
 
+  // 3. Create a Marker for the map to show current image location
+  const marker = new mapboxgl.Marker({ color: '#35af6d' });
+
   map.on('load', () => {
+    // Add Mapillary Green Lines (Vector Source)
     map.addSource('mapillary', {
       type: 'vector',
       tiles: ['https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=MLY|4142433049200173|72206abe5035850d6743b23a49c41333'],
@@ -48,17 +70,24 @@
       source: 'mapillary',
       'source-layer': 'sequence',
       layout: { 'line-cap': 'round', 'line-join': 'round' },
-      paint: { 'line-opacity': 0.6, 'line-color': 'rgb(53, 175, 109)', 'line-width': 2 }
+      paint: { 'line-opacity': 0.6, 'line-color': 'rgb(53, 175, 109)', 'line-width': 3 }
     });
 
-    // 1. Change cursor to pointer when hovering over Mapillary lines
+    // Change cursor on hover
     map.on('mouseenter', 'mapillary', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary', () => { map.getCanvas().style.cursor = ''; });
 
-    // 2. Click event: Move the Mapillary viewer to the clicked location
+    // Handle Map Clicks
     map.on('click', (e) => {
-      mly.moveTo({lngLat: e.lngLat})
-        .catch(err => console.error("No image found near this location.", err));
+      // Find the nearest image within 100 meters
+      mly.moveTo({ lngLat: e.lngLat, radius: 100 })
+        .catch(err => console.warn("No image found within 100m. Try clicking closer to a green line.", err));
+    });
+
+    // Update the Map Marker whenever the Mapillary image changes
+    mly.on('image', (event) => {
+      const lngLat = event.image.lngLat;
+      marker.setLngLat([lngLat.lng, lngLat.lat]).addTo(map);
     });
   });
 
