--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <meta charset="utf-8">
 <title>Mapillary + Mapbox Interactive Viewer</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta name="referrer" content="no-referrer-when-downgrade">
 
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.18.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.18.0/mapbox-gl.js"></script>
+
 <link href="https://unpkg.com/mapillary-js@4.1.0/dist/mapillary.css" rel="stylesheet">
 <script src="https://unpkg.com/mapillary-js@4.1.0/dist/mapillary.js"></script>
 
 <style>
   body { margin: 0; padding: 0; }
   #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+  /* The Image Viewer Window */
   #mly { 
     position: absolute; 
     bottom: 20px; 
@@ -33,23 +36,28 @@
 <div id="map"></div>
 
 <script>
+  // Your Mapbox Access Token
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
 
+  // 1. Initialize the Mapbox Map
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/standard',
-    zoom: 14, // Zoomed in more to see points better
+    zoom: 14, 
     center: [-87.622088, 41.878781] 
   });
 
+  // 2. Initialize the Mapillary Viewer with your authorized token
   const mly = new mapillary.Viewer({
     accessToken: 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b',
     container: 'mly',
   });
 
+  // 3. Create a Red Marker to show camera location
   const marker = new mapboxgl.Marker({ color: '#FF0000' });
 
   map.on('load', () => {
+    // Add Mapillary Vector Source
     map.addSource('mapillary', {
       type: 'vector',
       tiles: ['https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b'],
@@ -57,7 +65,7 @@
       maxzoom: 14
     });
 
-    // 1. The Green Lines (Sequences)
+    // Layer 1: The Green Lines (Sequences)
     map.addLayer({
       id: 'mapillary-lines',
       type: 'line',
@@ -67,32 +75,40 @@
       paint: { 'line-opacity': 0.5, 'line-color': '#35af6d', 'line-width': 2 }
     });
 
-    // 2. The "Bubbles" (Image Points)
+    // Layer 2: The "Bubbles" (Image Points)
     map.addLayer({
       id: 'mapillary-points',
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
       paint: {
-        'circle-radius': 4,
+        'circle-radius': 5,
         'circle-color': '#35af6d',
         'circle-stroke-width': 1,
         'circle-stroke-color': '#fff'
       }
     });
 
+    // Cursor feedback
     map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
 
+    // Handle Map Clicks
     map.on('click', (e) => {
-      // Search for images within 100m of the click
+      // Find the nearest image within 100 meters
       mly.moveTo({ lngLat: e.lngLat, radius: 100 })
-        .catch(err => console.warn("No image found.", err));
+        .catch(err => console.warn("No image found at this location.", err));
     });
 
+    // Sync the Map Marker when the image changes
     mly.on('image', (event) => {
       const lngLat = event.image.lngLat;
       marker.setLngLat([lngLat.lng, lngLat.lat]).addTo(map);
+    });
+
+    // Error handling for debugging
+    mly.on('error', (e) => {
+      console.error("Mapillary Viewer Error:", e.error);
     });
   });
 
