--- a/index.html
+++ b/index.html
@@ -2,92 +2,60 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapillary + Mapbox Production View</title>
+<title>Mapillary Failsafe Viewer</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<meta name="referrer" content="no-referrer-when-downgrade">
-
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-
-<link href="https://unpkg.com/mapillary-js@3.1.0/dist/mapillary.min.css" rel="stylesheet">
-<script src="https://unpkg.com/mapillary-js@3.1.0/dist/mapillary.min.js"></script>
-
 <style>
-  body { margin: 0; padding: 0; }
-  #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-  #mly { 
-    position: absolute; bottom: 20px; right: 20px; 
-    width: 400px; height: 300px; 
-    z-index: 100; border: 3px solid white; border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5); background: #000; 
-  }
+  body { margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; }
+  #map { flex: 1; width: 100%; }
+  #mly-container { height: 40%; width: 100%; border-top: 5px solid #35af6d; background: #000; }
+  iframe { width: 100%; height: 100%; border: none; }
 </style>
 </head>
 <body>
 
-<div id="mly"></div>
 <div id="map"></div>
+<div id="mly-container">
+  <iframe id="mly-frame" src="https://www.mapillary.com/embed?style=photo"></iframe>
+</div>
 
 <script>
-  // Access Tokens
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
   const mlyToken = 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b';
 
-  // Initialize Map with 'Streets' style for better contrast with green dots
   const map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v12', 
-    zoom: 14, 
-    center: [-87.622088, 41.878781] 
+    style: 'mapbox://styles/mapbox/streets-v11',
+    zoom: 14,
+    center: [-87.622088, 41.878781]
   });
-
-  // Initialize Mapillary Viewer
-  const mly = new mapillary.Viewer({
-    accessToken: mlyToken,
-    container: 'mly',
-  });
-
-  const marker = new mapboxgl.Marker({ color: '#FF0000' });
 
   map.on('load', () => {
-    // Adding Source
     map.addSource('mapillary', {
       type: 'vector',
       tiles: ['https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=' + mlyToken],
       minzoom: 6, maxzoom: 14
     });
 
-    // Adding Points (Bubbles)
     map.addLayer({
       id: 'mapillary-points',
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
-      paint: {
-        'circle-radius': 6,
-        'circle-color': '#35af6d',
-        'circle-stroke-width': 2,
-        'circle-stroke-color': '#ffffff'
-      }
+      paint: { 'circle-radius': 8, 'circle-color': '#35af6d', 'circle-stroke-width': 2, 'circle-stroke-color': '#fff' }
     });
 
-    // Click Logic using moveToKey
+    // When clicking a bubble, we simply update the URL of the iframe
     map.on('click', 'mapillary-points', (e) => {
       const imageId = e.features[0].properties.id;
-      mly.moveToKey(imageId.toString())
-        .catch(err => console.error("Load fail", err));
-    });
-
-    // Sync Marker
-    mly.on('nodechanged', (node) => {
-      marker.setLngLat([node.latLon.lon, node.latLon.lat]).addTo(map);
+      const newUrl = `https://www.mapillary.com/embed?image_key=${imageId}&style=photo`;
+      document.getElementById('mly-frame').src = newUrl;
     });
 
     map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
   });
-
-  map.addControl(new mapboxgl.NavigationControl());
 </script>
 </body>
 </html>
