--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <style>
   body { margin: 0; padding: 0; display: flex; height: 100vh; font-family: sans-serif; overflow: hidden; }
   
-  /* Photo Viewer: 60% Left */
-  #mly-container { width: 60%; height: 100%; background: #000; border-right: 4px solid #35af6d; position: relative; }
+  /* Left Panel: Imagery (60%) */
+  #mly-container { width: 60%; height: 100%; background: #000; border-right: 4px solid #35af6d; }
   iframe { width: 100%; height: 100%; border: none; }
 
-  /* Map Side: 40% Right */
+  /* Right Panel: Map (40%) */
   #map-container { width: 40%; height: 100%; position: relative; }
   #map { width: 100%; height: 100%; }
 
-  /* Controls: Top Right */
+  /* Controls: Top Right for high visibility */
   .controls {
     position: absolute; top: 10px; right: 10px; z-index: 10;
-    background: rgba(255, 255, 255, 0.95); padding: 15px; border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 220px;
+    background: white; padding: 15px; border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 200px;
     display: flex; flex-direction: column; gap: 10px;
   }
   .row { display: flex; flex-direction: column; gap: 4px; }
@@ -60,7 +60,7 @@
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v11',
     zoom: 12,
-    center: [-89.9449, 34.3085] 
+    center: [-89.9449, 34.3085] // Batesville, MS area
   });
 
   map.on('load', () => {
@@ -69,6 +69,34 @@
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`]
     });
 
-    // Sequence Lines: Visible globally
+    // Sequence Lines
     map.addLayer({
-      id: 'map
+      id: 'mapillary-lines',
+      type: 'line',
+      source: 'mapillary',
+      'source-layer': 'sequence',
+      paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.6 }
+    });
+
+    // Image Points with zoom-scaling
+    map.addLayer({
+      id: 'mapillary-points',
+      type: 'circle',
+      source: 'mapillary',
+      'source-layer': 'image',
+      minzoom: 6,
+      maxzoom: 24, // Stays visible no matter how far you zoom in
+      paint: { 
+        'circle-radius': [
+          'interpolate', ['linear'], ['zoom'],
+          10, 2,  // Small dots when zoomed out
+          14, 6,  // Medium dots
+          18, 12  // Large dots for precision clicking
+        ],
+        'circle-color': '#35af6d', 
+        'circle-stroke-width': 1, 
+        'circle-stroke-color': '#fff' 
+      }
+    });
+
+    // Pointer cursor on hover [cite: 1.
