--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapillary - 50/50 Split View</title>
+<title>Mapillary - 50/50 Date Filter</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  body { margin: 0; padding: 0; display: flex; height: 100vh; overflow: hidden; }
+  body { margin: 0; padding: 0; display: flex; height: 100vh; overflow: hidden; font-family: sans-serif; }
   
-  /* 50/50 Left Panel: Imagery */
+  /* Left Panel: Imagery */
   #mly-container { width: 50%; height: 100%; background: #000; border-right: 2px solid #35af6d; }
   iframe { width: 100%; height: 100%; border: none; }
 
-  /* 50/50 Right Panel: Map */
-  #map { width: 50%; height: 100%; }
+  /* Right Panel: Map */
+  #map-container { width: 50%; height: 100%; position: relative; }
+  #map { width: 100%; height: 100%; }
+
+  /* Floating Controls */
+  .controls {
+    position: absolute; top: 10px; right: 10px; z-index: 10;
+    background: white; padding: 12px; border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 180px;
+    display: flex; flex-direction: column; gap: 8px;
+  }
+  .row { display: flex; flex-direction: column; gap: 2px; }
+  label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
+  input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
+  button { padding: 8px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
 </style>
 </head>
 <body>
@@ -23,7 +36,20 @@
   <iframe id="mly-frame" src="https://www.mapillary.com/embed?style=photo&menu=false"></iframe>
 </div>
 
-<div id="map"></div>
+<div id="map-container">
+  <div class="controls">
+    <div class="row">
+      <label>From Date</label>
+      <input type="date" id="date-from">
+    </div>
+    <div class="row">
+      <label>To Date</label>
+      <input type="date" id="date-to">
+    </div>
+    <button onclick="applyDateFilter()">Filter Map</button>
+  </div>
+  <div id="map"></div>
+</div>
 
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
@@ -42,7 +68,6 @@
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`]
     });
 
-    // Sequence Lines
     map.addLayer({
       id: 'mapillary-lines',
       type: 'line',
@@ -51,14 +76,13 @@
       paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.6 }
     });
 
-    // Image Points (Bubbles) - Persistent Zoom
     map.addLayer({
       id: 'mapillary-points',
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
       minzoom: 6,
-      maxzoom: 24, // Stays visible when zoomed in deep
+      maxzoom: 24, // Stays visible during deep zoom
       paint: { 
         'circle-radius': ['interpolate', ['linear'], ['zoom'], 10, 2, 14, 5, 18, 10],
         'circle-color': '#35af6d', 
@@ -67,10 +91,29 @@
       }
     });
 
-    // Hand Pointer Selector
+    // Pointer cursor logic
     map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
   });
+
+  function applyDateFilter() {
+    const fromVal = document.getElementById('date-from').value;
+    const toVal = document.getElementById('date-to').value;
+    
+    // Convert to Unix milliseconds
+    const fromTs = fromVal ? new Date(fromVal).getTime() : 0;
+    const toTs = toVal ? new Date(toVal).getTime() : Date.now();
+    
+    let filter = ['all'];
+    if (fromTs > 0 || toTs < Date.now()) {
+      filter.push(['>=', ['get', 'captured_at'], fromTs]);
+      filter.push(['<=', ['get', 'captured_at'], toTs]);
+    }
+
+    const finalFilter = filter.length > 1 ? filter : null;
+    if (map.getLayer('mapillary-lines')) map.setFilter('mapillary-lines', finalFilter);
+    if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', finalFilter);
+  }
 
   map.on('click', (e) => {
     const features = map.queryRenderedFeatures(e.point, { layers: ['mapillary-points', 'mapillary-lines'] });
@@ -80,7 +123,7 @@
     }
   });
 
-  map.addControl(new mapboxgl.NavigationControl());
+  map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
 </script>
 </body>
 </html>
