--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  /* Flexbox ensures both halves are visible immediately */
+  /* Flexbox ensures both halves are visible and sized correctly */
   body { margin: 0; padding: 0; display: flex; height: 100vh; width: 100vw; overflow: hidden; font-family: sans-serif; }
   
   #mly-container { width: 50%; height: 100%; background: #000; border-right: 2px solid #35af6d; box-sizing: border-box; }
@@ -61,7 +61,7 @@
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`]
     });
 
-    // Native sequence lines
+    // Sequence lines for broad overview
     map.addLayer({
       id: 'mapillary-lines',
       type: 'line',
@@ -70,13 +70,13 @@
       paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.5 }
     });
 
-    // Native-style bubbles (visible at all zooms)
+    // Native-style bubbles visible at all zoom levels
     map.addLayer({
       id: 'mapillary-points',
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
-      minzoom: 0, // Clickable at any level
+      minzoom: 0, // Clickable even when zoomed way out
       maxzoom: 24,
       paint: { 
         'circle-radius': ['interpolate', ['linear'], ['zoom'], 0, 1, 10, 2, 14, 5, 18, 10],
@@ -86,7 +86,7 @@
       }
     });
 
-    // Pointer cursor for better interactivity
+    // Change cursor to pointer over clickable points
     map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
   });
@@ -95,4 +95,25 @@
     const fromVal = document.getElementById('date-from').value;
     const toVal = document.getElementById('date-to').value;
     const fromTs = fromVal ? new Date(fromVal).getTime() : 0;
-    const toTs = toVal ? new Date(to
+    const toTs = toVal ? new Date(toVal).getTime() : Date.now();
+    
+    // Combine date logic into a single filter array
+    const filter = ['all', ['>=', ['get', 'captured_at'], fromTs], ['<=', ['get', 'captured_at'], toTs]];
+    
+    if (map.getLayer('mapillary-lines')) map.setFilter('mapillary-lines', filter);
+    if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', filter);
+  }
+
+  map.on('click', (e) => {
+    const features = map.queryRenderedFeatures(e.point, { layers: ['mapillary-points', 'mapillary-lines'] });
+    if (features.length > 0) {
+      const imageId = features[0].properties.id;
+      // Load selected photo into the left panel
+      document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${imageId}&style=photo&menu=false`;
+    }
+  });
+
+  map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
+</script>
+</body>
+</html>
