--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapillary Tracker - Persistent Bubbles</title>
+<title>Mapillary Tracker - Infinite Zoom</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
   body { margin: 0; padding: 0; display: flex; height: 100vh; width: 100vw; overflow: hidden; font-family: sans-serif; }
-  
   #mly-container { width: 50%; height: 100%; background: #000; border-right: 2px solid #35af6d; box-sizing: border-box; }
   iframe { width: 100%; height: 100%; border: none; }
-
   #map-container { width: 50%; height: 100%; position: relative; }
   #map { width: 100%; height: 100%; }
-
   .controls {
     position: absolute; top: 10px; right: 10px; z-index: 10;
     background: white; padding: 10px; border-radius: 8px;
@@ -51,13 +48,16 @@
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v11',
     zoom: 12,
-    center: [-89.9449, 34.3085] 
+    center: [-89.9449, 34.3085],
+    maxZoom: 24 // Allow the map itself to zoom in deep
   });
 
   map.on('load', () => {
     map.addSource('mapillary', {
       type: 'vector',
-      tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`]
+      tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
+      minzoom: 0,
+      maxzoom: 24 // Ensure the data source remains active at high zoom
     });
 
     map.addLayer({
@@ -65,26 +65,25 @@
       type: 'line',
       source: 'mapillary',
       'source-layer': 'sequence',
+      maxzoom: 24, // Keep lines visible
       paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.5 }
     });
 
-    // Bubbles configured for persistent visibility
     map.addLayer({
       id: 'mapillary-points',
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
       minzoom: 0, 
-      maxzoom: 24, // Ensures they stay visible when zoomed all the way in
+      maxzoom: 24, // Keep bubbles visible at max zoom
       paint: { 
-        // Radius grows as you zoom in to keep the points clickable
         'circle-radius': [
           'interpolate', ['linear'], ['zoom'],
-          0, 1,      // Tiny at world view
-          10, 2,     // Visible at city view
-          14, 6,     // Larger at street view
-          18, 12,    // Bold for precision picking
-          22, 20     // Massive at max zoom
+          0, 1,      // World view
+          10, 2,     // City view
+          14, 6,     // Street view
+          18, 12,    // Neighborhood view
+          22, 25     // House-level view (Giant bubbles for easy clicking)
         ],
         'circle-color': '#35af6d', 
         'circle-stroke-width': 1, 
@@ -92,7 +91,7 @@
       }
     });
 
-    // Hand pointer selector logic
+    // Cursor pointer logic
     map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
   });
