--- a/index.html
+++ b/index.html
@@ -2,29 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapillary Tracker - Stable Locked Zoom</title>
+<title>Mapillary Project Tracker - Stable View</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  /* Flexbox is the most stable way to prevent "blank" maps */
-  body { margin: 0; padding: 0; display: flex; height: 100vh; width: 100vw; overflow: hidden; font-family: sans-serif; }
+  body { margin: 0; padding: 0; font-family: sans-serif; background: #333; }
   
-  #mly-container { width: 50%; height: 100%; background: #000; border-right: 2px solid #35af6d; box-sizing: border-box; }
+  /* Absolute positioning prevents "0 height" blank map errors */
+  #mly-container {
+    position: absolute; top: 0; bottom: 0; left: 0;
+    width: 50%; background: #000; border-right: 2px solid #35af6d;
+  }
+  #map-container {
+    position: absolute; top: 0; bottom: 0; right: 0;
+    width: 50%;
+  }
+  #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
 
-  #map-container { width: 50%; height: 100%; position: relative; }
-  #map { width: 100%; height: 100%; }
-
+  /* Floating controls over the map */
   .controls {
-    position: absolute; top: 10px; right: 10px; z-index: 10;
-    background: white; padding: 10px; border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2); width: 160px;
-    display: flex; flex-direction: column; gap: 5px;
+    position: absolute; top: 15px; right: 15px; z-index: 10;
+    background: white; padding: 12px; border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 180px;
+    display: flex; flex-direction: column; gap: 8px;
   }
-  label { font-size: 9px; font-weight: bold; color: #666; text-transform: uppercase; }
-  input { padding: 4px; border: 1px solid #ccc; border-radius: 4px; font-size: 11px; }
-  button { padding: 8px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; margin-top: 5px; }
+  label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
+  input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
+  button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
+  button:hover { background: #2d945b; }
 </style>
 </head>
 <body>
@@ -39,22 +46,22 @@
     <input type="date" id="date-from">
     <label>To Date</label>
     <input type="date" id="date-to">
-    <button onclick="applyDateFilter()">Update Map</button>
+    <button onclick="applyDateFilter()">Filter Progress</button>
   </div>
   <div id="map"></div>
 </div>
 
 <script>
+  // Your verified tokens and project center
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
   const mlyToken = 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b';
 
-  // Initialize the map with a hard zoom lock
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v11',
     zoom: 12,
-    center: [-89.9449, 34.3085],
-    maxZoom: 17 // This prevents zooming past where bubbles are visible
+    center: [-89.9449, 34.3085], // Batesville, MS
+    maxZoom: 17 // HARD LOCK: Bubbles stay visible
   });
 
   map.on('load', () => {
@@ -62,17 +69,19 @@
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
       minzoom: 0,
-      maxzoom: 17 // Synchronized with the map's max zoom
+      maxzoom: 17
     });
 
+    // Sequence lines for debris run overview
     map.addLayer({
       id: 'mapillary-lines',
       type: 'line',
       source: 'mapillary',
       'source-layer': 'sequence',
-      paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.5 }
+      paint: { 'line-color': '#35af6d', 'line-width': 2.5, 'line-opacity': 0.6 }
     });
 
+    // Bubbles configured to grow as you zoom
     map.addLayer({
       id: 'mapillary-points',
       type: 'circle',
@@ -80,20 +89,14 @@
       'source-layer': 'image',
       minzoom: 0, 
       paint: { 
-        'circle-radius': [
-          'interpolate', ['linear'], ['zoom'],
-          0, 1,      
-          10, 2,     
-          14, 6,     
-          17, 12 // Maximum bubble size at the lock level
-        ],
+        'circle-radius': ['interpolate', ['linear'], ['zoom'], 0, 1, 10, 2.5, 14, 6, 17, 12],
         'circle-color': '#35af6d', 
         'circle-stroke-width': 1, 
         'circle-stroke-color': '#fff' 
       }
     });
 
-    // Cursor pointer logic
+    // Hand pointer selector logic
     map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
     map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
   });
@@ -104,13 +107,4 @@
     const fromTs = fromVal ? new Date(fromVal).getTime() : 0;
     const toTs = toVal ? new Date(toVal).getTime() : Date.now();
     
-    const filter = ['all', ['>=', ['get', 'captured_at'], fromTs], ['<=', ['get', 'captured_at'], toTs]];
-    
-    if (map.getLayer('mapillary-lines')) map.setFilter('mapillary-lines', filter);
-    if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', filter);
-  }
-
-  map.on('click', (e) => {
-    const features = map.queryRenderedFeatures(e.point, { layers: ['mapillary-points', 'mapillary-lines'] });
-    if (features.length > 0) {
-      const image
+    const filter = ['all', ['>=', ['get', 'captured_at'], fromTs], ['
