--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
+  /* Stable Absolute Layout for 50/50 Split */
   body { margin: 0; padding: 0; font-family: sans-serif; background: #1a1a1a; overflow: hidden; }
-  #mly-container { position: absolute; top: 0; bottom: 0; left: 0; width: 50%; background: #000; border-right: 3px solid #35af6d; }
-  #map-container { position: absolute; top: 0; bottom: 0; right: 0; width: 50%; }
+  
+  #mly-container {
+    position: absolute; top: 0; bottom: 0; left: 0;
+    width: 50%; background: #000; border-right: 3px solid #35af6d;
+  }
+  #map-container {
+    position: absolute; top: 0; bottom: 0; right: 0;
+    width: 50%;
+  }
   #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
-  .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 12px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 180px; display: flex; flex-direction: column; gap: 8px; }
+
+  .controls {
+    position: absolute; top: 15px; right: 15px; z-index: 10;
+    background: white; padding: 12px; border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 180px;
+    display: flex; flex-direction: column; gap: 8px;
+  }
   label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
   input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
@@ -36,7 +50,7 @@
 </div>
 
 <script>
-  // 1. Identify the Client/Project ID from the URL
+  // 1. Identify Client ID from URL (?id=clientname)
   const urlParams = new URLSearchParams(window.location.search);
   const projectID = urlParams.get('id'); 
 
@@ -48,16 +62,18 @@
     style: 'mapbox://styles/mapbox/streets-v11',
     zoom: 12,
     center: [-89.9449, 34.3085],
-    maxZoom: 17 
+    maxZoom: 17 // Hard lock to keep bubbles visible
   });
 
-  map.on('idle', () => { map.resize(); }); // Fixes blank map issues
+  // Force map refresh to avoid "blank" rendering
+  map.on('idle', () => { map.resize(); });
 
   map.on('load', () => {
-    // Mapillary Global Layers (Visible for all projects)
+    // Mapillary Global Coverage
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
+      minzoom: 0,
       maxzoom: 17
     });
 
@@ -74,22 +90,24 @@
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
+      minzoom: 0, 
       paint: { 
-        'circle-radius': ['interpolate', ['linear'], ['zoom'], 10, 2.5, 14, 6, 17, 12],
+        'circle-radius': ['interpolate', ['linear'], ['zoom'], 0, 1, 10, 2.5, 14, 6, 17, 12],
         'circle-color': '#35af6d', 
         'circle-stroke-width': 1, 
         'circle-stroke-color': '#fff' 
       }
     });
 
-    // 2. Load Client-Specific GeoJSON
+    // 2. Client-Specific Data Loader
     if (projectID) {
       map.addSource('client-data', {
         type: 'geojson',
-        data: `./data/${projectID}.json` // Looks in your repo's /data folder
+        // Loads YOUR_ID.json from the /data folder
+        data: `./data/${projectID}.json` 
       });
 
-      // Add Polygons (e.g., Debris Zones)
+      // Show Polygons (Debris Zones/Boundaries)
       map.addLayer({
         id: 'client-polygons',
         type: 'fill',
@@ -98,13 +116,13 @@
         paint: { 'fill-color': '#0080ff', 'fill-opacity': 0.3 }
       });
 
-      // Add Points (e.g., Damage Sites)
+      // Show Points (Damage Sites/Tickets)
       map.addLayer({
-        id: 'client-sites',
+        id: 'client-points',
         type: 'circle',
         source: 'client-data',
         filter: ['==', ['geometry-type'], 'Point'],
-        paint: { 'circle-radius': 7, 'circle-color': '#ff0000', 'circle-stroke-width': 2, 'circle-stroke-color': '#fff' }
+        paint: { 'circle-radius': 8, 'circle-color': '#ff0000', 'circle-stroke-width': 2, 'circle-stroke-color': '#fff' }
       });
     }
 
@@ -118,6 +136,7 @@
     const fromTs = fromVal ? new Date(fromVal).getTime() : 0;
     const toTs = toVal ? new Date(toVal).getTime() : Date.now();
     const filter = ['all', ['>=', ['get', 'captured_at'], fromTs], ['<=', ['get', 'captured_at'], toTs]];
+    
     if (map.getLayer('mapillary-lines')) map.setFilter('mapillary-lines', filter);
     if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', filter);
   }
