--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  body { margin: 0; padding: 0; font-family: 'Helvetica Neue', Arial, sans-serif; background: #1a1a1a; overflow: hidden; }
+  body { margin: 0; padding: 0; font-family: sans-serif; background: #1a1a1a; overflow: hidden; }
   #mly-container { position: absolute; top: 0; bottom: 0; left: 0; width: 50%; background: #000; border-right: 3px solid #35af6d; }
   #map-container { position: absolute; top: 0; bottom: 0; right: 0; width: 50%; }
   #map { width: 100%; height: 100%; }
@@ -53,11 +53,7 @@
   map.on('idle', () => { map.resize(); });
 
   map.on('load', () => {
-    // 1. ADD DATA SOURCES FIRST
+    // 1. ADD ALL SOURCES
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
-      maxzoom: 17
-    });
-
-    fetch(`./data/${projectID
